Skip building qcom overlay device tree for sm7250 projects
Skip for B9

Bug: 158714637
Signed-off-by: Roger Liao <rogerliao@google.com>
Change-Id: Ibe8224c095f22130f1a5beb78cd24050ebcfa3c3

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -1,4 +1,4 @@
-ifeq (,$(filter y, $(CONFIG_BOARD_BRAMBLE) $(CONFIG_BOARD_REDFIN)))
+ifeq (,$(filter y, $(CONFIG_BOARD_BRAMBLE) $(CONFIG_BOARD_REDFIN) $(CONFIG_BOARD_BARBET)))
 
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
         dtbo-$(CONFIG_ARCH_KONA) += \
@@ -157,7 +157,7 @@ dtb-$(CONFIG_ARCH_SCUBA) += scuba-rumi.dtb \
 	scuba-qrd.dtb
 endif
 
-endif #CONFIG_BOARD_BRAMBLE CONFIG_BOARD_REDFIN
+endif #CONFIG_BOARD_BRAMBLE CONFIG_BOARD_REDFIN CONFIG_BOARD_BARBET
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
